2006-11-24  Ales Hakl  <ales at hakl dot net>

	* src/parse.c (parse_close): check that given state is valid for
	close paren.

2006-11-12  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_make_symbol): moved symbol table initialization 
	here.
	(gsh_check_init): removed locking and other unnecessary code
	(dfsch_eval_impl): propagate thread_info_t when recursing to self
	(eval_list): use dfsch_eval_impl instead of dfsch_eval
	(dfsch_eval_impl): propagate thread_info to eval_list

2006-11-11  Ales Hakl  <ales at hakl dot net>

	* src/hash.c (dfsch_hash_set): Synchronization of hash modifications

2006-11-05  Ales Hakl  <ales at hakl dot net>

	* src/hash.c (get_hash): Default hash function for all objects

2006-11-04  Ales Hakl  <ales at hakl dot net>

	* *: Removed concept of interpreter context

	* src/repl.c (main): -L option

	* lib/load.c (dfsch_load_scm): Searching for source files.

2006-10-26  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_try): restore continuation stack.
	(dfsch_try): removed unnecesary casts

2006-10-24  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_try): invalidate inner continuations
	Removed all occurencies of "volatile" (it's unnecessary)

2006-10-22  Ales Hakl  <ales at hakl dot net>

	* src/number.c (dfsch__number_native_register): derive value of pi
	from math library (pi = 4*arctan 1)
	(native_exp): exp without arguments returns e

2006-10-21  Ales Hakl  <ales at hakl dot net>

	* scm/test.scm (strings): Some tests for strings.
	(*utf8*): utf-8 related tests 

	* src/dfsch.c (dfsch_apply_impl): typeless-value can be applied
	and evaluates to empty list (quite useless feature)
	(dfsch_apply_impl): apply_impl is internal implementation
	function, therefore should be static

	* src/native.c (native_reduce): More Common Lisp like reduce.

2006-10-20  Ales Hakl  <ales at hakl dot net>

	* src/native.c (native_reduce): reduce function

	* src/number.c (dfsch_make_number_from_long): Smallnums allocated